# VideoSurveillance

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: main.cpp
core/: CameraConfig.cpp  CameraConfig.h  CameraStream.cpp  CameraStream.h  DotEnv.cpp  DotEnv.h  FfmpegTest.cpp
ui/: CameraPanel.cpp  CameraPanel.h  MainWindow.cpp  MainWindow.h  VideoFrameWidget.cpp  VideoFrameWidget.h
